// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag href renders as an anchor 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<a
    class="emotion-0"
    href="#"
  />
</DocumentFragment>
`;

exports[`Tag href renders in disable state with an anchor 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: #f0f0f0;
  color: #c0c0c0;
  border-color: #cccccc;
  border-radius: 0;
}

<span
    class="emotion-0"
    disabled=""
    href="#"
  />
</DocumentFragment>
`;

exports[`Tag renders a tag with a custom stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  color: #0A68C1;
  border-radius: 32px;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:hover:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:active:not(:disabled) {
  background-color: #fafafa;
}

.emotion-0:active:not(:disabled) svg {
  fill: #02509B;
  color: #02509B;
}

.emotion-0:focus:not(:disabled) {
  border-width: 2px;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Tag renders a tag with the default stylePreset 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Tag renders in disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: #f0f0f0;
  color: #c0c0c0;
  border-color: #cccccc;
  border-radius: 0;
}

<span
    class="emotion-0"
    disabled=""
  />
</DocumentFragment>
`;

exports[`Tag renders with Large size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 40px;
  padding: 8px 12px;
  line-height: calc(40px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Tag renders with Medium size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Tag renders with Small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 24px;
  padding: 4px 8px;
  line-height: calc(24px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Tag renders with default styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  border-style: solid;
  border-width: 2px;
  color: #777777;
  min-height: 32px;
  padding: 8px 12px;
  line-height: calc(32px - 2px * 2);
  -webkit-text-decoration: none;
  text-decoration: none;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  background-color: transparent;
  color: #2e2e2e;
  border-color: #cccccc;
  border-radius: 0;
}

.emotion-0:hover:not(:disabled) {
  border-color: #535353;
}

.emotion-0:active:not(:disabled) {
  background-color: #f0f0f0;
}

.emotion-0:focus:not(:disabled) {
  border-color: #535353;
}

.emotion-0:disabled {
  background-color: #f0f0f0;
  color: #c0c0c0;
}

<span
    class="emotion-0"
  />
</DocumentFragment>
`;
